--- a/WebProje/Api/Api/Properties/launchSettings.json
+++ b/WebProje/Api/Api/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/Uruns",
+      "launchUrl": "api/Hakkimizda",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/Uruns",
+      "launchUrl": "api/Hakkimizda",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
